...
    addToFavorites: "Add to favorites",
    removeFromFavorites: "Remove from favorites",
    addToBag: "Add to bag",
    addToBagButton: "Add to Bag",
    alreadyInBag: "Already in bag",
    selectSize: "Select size",
    description: "Description",
    deliveryReturns: "Delivery & returns",
    reviews: "Reviews",
    size: "Size",
    sizeTypeUS: "US",
    sizeTypeUK: "UK",
    sizeTypeEU: "EU",
...
